[gd_scene load_steps=7 format=2]

[ext_resource path="res://UI/Font/manaspc.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/TutorialPanel.gd" type="Script" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.498039, 0.498039, 0.498039, 0.196078 )
draw_center = false

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
resource_name = "tutorial_fade_in"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "tutorial_fade_out"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="TutorialPanel" type="Panel"]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -60.0
margin_top = -60.0
margin_right = 60.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialText" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
custom_fonts/font = SubResource( 2 )
text = "WASD to move"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaitTimer" type="Timer" parent="."]
wait_time = 4.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/tutorial_fade_in = SubResource( 3 )
anims/tutorial_fade_out = SubResource( 4 )
[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]
